[gd_scene load_steps=3 format=3 uid="uid://bralccpaksi7w"]

[ext_resource type="Script" uid="uid://tm8ru1rt81bh" path="res://scripts/ui/menu.gd" id="1_7w7rl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7w7rl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.29411766)
shadow_size = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w7rl")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_lock_ = true

[node name="NewGame" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7w7rl")
text = "New Game"
metadata/_edit_lock_ = true

[node name="Options" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7w7rl")
text = "Options"
metadata/_edit_lock_ = true

[node name="Exit" type="Button" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7w7rl")
text = "Exit"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.5
offset_top = 90.0
offset_right = 344.5
offset_bottom = 214.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 90
text = "Gravity Feelings"

[connection signal="pressed" from="MainContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainContainer/Exit" to="." method="_on_exit_pressed"]
